fix: Remove unused thumbnail image and update image references to favicon

--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CrossValueChain Domain Name Service",
-  "description": "A CrossValueChain Domain Name Service built with Scaffold-ETH",
+  "name": "Xenea Domain Name Service",
+  "description": "A Xenea Domain Name Service built with Scaffold-ETH",
   "iconPath": "logo.svg"
 }
