--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,7 @@
     "ethers": "^6.13.0",
     "intmax-walletsdk": "0.0.4",
     "next": "^14.0.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^17.0.35",
     "@types/nprogress": "^0",
     "@types/react": "^18.0.9",
