--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,36 @@
 {
+  "theme_color": "#32b8f5",
+  "background_color": "#35a5f5",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "Xenea Domain Name Service",
+  "short_name": "Xenea Domain Name Service",
   "description": "A Xenea Domain Name Service built with Scaffold-ETH",
-  "iconPath": "logo.svg"
+  "icons": [
+    {
+      "src": "/favicon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "256x256",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ]
 }
