--- a/package.json
+++ b/package.json
@@ -12,40 +12,9 @@
     "contract": "yarn workspace @se-2/hardhat",
     "frontend": "yarn workspace @se-2/nextjs",
     "cdk": "yarn workspace @se-2/cdk",
-    "setup": "yarn workspace @se-2/hardhat setup",
-    "account": "yarn workspace @se-2/hardhat account",
-    "chain": "yarn workspace @se-2/hardhat chain",
-    "fork": "yarn workspace @se-2/hardhat fork",
-    "deploy": "yarn workspace @se-2/hardhat deploy",
-    "verify": "yarn workspace @se-2/hardhat verify",
-    "hardhat-verify": "yarn workspace @se-2/hardhat hardhat-verify",
-    "compile": "yarn workspace @se-2/hardhat compile",
-    "generate": "yarn workspace @se-2/hardhat generate",
-    "flatten": "yarn workspace @se-2/hardhat flatten",
-    "hardhat:lint": "yarn workspace @se-2/hardhat lint",
-    "hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
-    "hardhat:format": "yarn workspace @se-2/hardhat format",
-    "hardhat:compile": "yarn workspace @se-2/hardhat compile",
-    "hardhat:test": "yarn workspace @se-2/hardhat test",
-    "hardhat:register": "yarn workspace @se-2/hardhat task:register",
-    "hardhat:gaslessRegister": "yarn workspace @se-2/hardhat task:gaslessRegister",
-    "hardhat:price": "yarn workspace @se-2/hardhat task:price",
-    "hardhat:withdraw": "yarn workspace @se-2/hardhat task:withdraw",
-    "hardhat:setRecord": "yarn workspace @se-2/hardhat task:setRecord",
-    "hardhat:getTokenURI": "yarn workspace @se-2/hardhat task:getTokenURI",
-    "hardhat:checkRegistered": "yarn workspace @se-2/hardhat task:checkRegistered",
-    "test": "yarn hardhat:test",
     "format": "yarn next:format && yarn hardhat:format",
-    "start": "yarn workspace @se-2/nextjs dev",
-    "next:lint": "yarn workspace @se-2/nextjs lint",
-    "next:format": "yarn workspace @se-2/nextjs format",
-    "next:check-types": "yarn workspace @se-2/nextjs check-types",
-    "next:build": "yarn workspace @se-2/nextjs build",
-    "next:serve": "yarn workspace @se-2/nextjs serve",
     "postinstall": "husky install",
-    "precommit": "lint-staged",
-    "vercel": "yarn workspace @se-2/nextjs vercel",
-    "vercel:yolo": "yarn workspace @se-2/nextjs vercel:yolo"
+    "precommit": "lint-staged"
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
