--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,7 +22,9 @@
     "task:withdraw": "hardhat withdraw",
     "task:setRecord": "hardhat setRecord",
     "task:getTokenURI": "hardhat getTokenURI",
-    "task:checkRegistered": "hardhat checkRegistered"
+    "task:checkRegistered": "hardhat checkRegistered",
+    "task:upgradeDomains": "hardhat upgradeDomains",
+    "task:batchRegister": "hardhat batchRegister"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
