fix: Update Vercel configuration to include builds and build command

--- a/packages/frontend/vercel.json
+++ b/packages/frontend/vercel.json
@@ -1,3 +1,11 @@
 {
-  "installCommand": "yarn install"
+  "installCommand": "yarn install",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "buildCommand": "yarn build",
+  "buildOutput": ".next"
 }
