fix: Remove buildOutput from Vercel configuration

--- a/packages/frontend/vercel.json
+++ b/packages/frontend/vercel.json
@@ -6,6 +6,5 @@
       "use": "@vercel/node"
     }
   ],
-  "buildCommand": "yarn build",
-  "buildOutput": ".next"
+  "buildCommand": "yarn build"
 }
