--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+NEXT_PUBLIC_API_BASE_URL=
 NEXT_PUBLIC_RELAYER_PRIVATE_KEY=
 NEXT_PUBLIC_API_KEY=
