--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -21,6 +21,17 @@
         "bracketSpacing": false,
         "explicitTypes": "preserve"
       }
+    },
+    {
+      "files": "**/*.js",
+      "options": {
+        "printWidth": 80,
+        "tabWidth": 2,
+        "useTabs": false,
+        "singleQuote": false,
+        "bracketSpacing": false,
+        "explicitTypes": "preserve"
+      }
     }
   ]
 }
