--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -56,6 +56,7 @@
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.4.3",
